--- a/Atividade1/App.xaml
+++ b/Atividade1/App.xaml
@@ -3,6 +3,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Atividade1.App">
     <Application.Resources>
+        <ResourceDictionary>
+            <Color x:Key="TituloMenu">Black</Color>
+            <Color x:Key="Menu">blue</Color>
+        </ResourceDictionary>
 
     </Application.Resources>
 </Application>
